--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@snowpack/plugin-postcss": "^1.2.2",
+    "cssnano": "^5.0.2",
+    "postcss": "^8.2.15",
+    "postcss-cli": "^8.3.1",
     "postcss-custom-media": "^8.0.0",
+    "postcss-import": "^14.0.2",
+    "postcss-mixins": "^8.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.0",
     "snowpack": "^3.3.5"
   },
-  "browserslist": "ie10",
   "dependencies": {
     "@snowpack/plugin-sass": "^1.4.0"
   }
